force-app/main/default/objects/ActivityGroup__c/ActivityGroup__c.object-meta.xml
<CustomObject>
    <label>Activity Group</label>
    <nameField>
        <label>Activity Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Activity Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>