force-app/main/default/objects/ActivityGroup__c/fields/EstimateId__c.field-meta.xml
<CustomField>
    <fullName>EstimateId__c</fullName>
    <label>Estimate</label>
    <referenceTo>Estimate__c</referenceTo>
    <relationshipLabel>Activity Groups</relationshipLabel>
    <relationshipName>ActivityGroups</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>