force-app/main/default/objects/ActivityGroup__c/fields/Guidance__c.field-meta.xml
<CustomField>
    <fullName>Guidance__c</fullName>
    <label>Guidance</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>