force-app/main/default/objects/ActivityGroup__c/fields/SummaryId__c.field-meta.xml
<CustomField>
    <fullName>SummaryId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Summary</label>
    <referenceTo>TaskSummary__c</referenceTo>
    <relationshipLabel>Activity Groups</relationshipLabel>
    <relationshipName>ActivityGroups</relationshipName>
    <type>Lookup</type>
</CustomField>