force-app/main/default/objects/ActivityGroup__c/fields/TotalCalculatedDuration__c.field-meta.xml
<CustomField>
    <fullName>TotalCalculatedDuration__c</fullName>
    <formula>SummaryId__r.TotalCalculatedDuration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Calculated Duration</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>